--- a/css1.css
+++ b/css1.css
@@ -49,7 +49,14 @@ div#nav2{
 
 }
 
+
 .noticias{
+    display: block;
+
+
+}
+
+.noticias2{
     display: inline-flex;
 }
 
@@ -60,9 +67,45 @@ div#nav2{
 .auto{
     margin-right: 3%;
     float: left;
+    display: list-item;
+    list-style: none;
 }
 
-.auto2{
-    margin-left: 20%;
+.auto1{
+    float: left;
+    display: list-item;
+    list-style: none;
 
+
+}
+
+.auto2 {
+    margin-left: 141px;
+    display: inline-block;
+    list-style: none;
+
+
+
+
+
+}
+
+a.tam{
+    font-size: 18px;
+
+}
+
+img.tam{
+    width: 97%;
+    height: 93%;
+    padding: 0 2px 0 2px ;
+}
+img.tamg{
+    width: 294px;
+    height: 96px;
+
+}
+
+#principal{
+    background-color: #FFFFFF;
 }
