--- a/css1.css
+++ b/css1.css
@@ -1,17 +1,20 @@
 body{
     background-color: orange;
-    width: 760px;
+    width: 980px;
     margin-top:20px;
-    margin-left:auto;
+margin-left:auto;
     margin-right:auto;
 }
 ul.nav{
     list-style: none;
     float:left;
 
-    padding: 0;
-    margin:0;
-    border:0;
+
+}
+
+p{
+
+    text-align: center;
 }
 ul.nav a{
     text-decoration: none;
@@ -36,7 +39,7 @@ ul.nav a{
 .nav li a:hover,
 .nav li a:focus {
     color: black;
-   /* background: rgba(255,255,255,.15);*/
+
 }
 .nav a:active{
     color:black;
@@ -47,11 +50,16 @@ div#nav2{
     margin-top: 50px;
     padding-top: 4%;
 
+
+}
+div#izquierda{
+    width: 625px;
+
 }
 
 
 .noticias{
-    display: block;
+    display: inline-flex;
 
 
 }
@@ -75,14 +83,17 @@ div#nav2{
     float: left;
     display: list-item;
     list-style: none;
+    margin-bottom: 5%;
+
 
 
 }
 
 .auto2 {
-    margin-left: 141px;
+    margin-left: 10px;
     display: inline-block;
     list-style: none;
+
 
 
 
@@ -96,8 +107,8 @@ a.tam{
 }
 
 img.tam{
-    width: 97%;
-    height: 93%;
+    width: 200px;
+    height: 85px;
     padding: 0 2px 0 2px ;
 }
 img.tamg{
@@ -106,6 +117,32 @@ img.tamg{
 
 }
 
-#principal{
+#contenido{
     background-color: #FFFFFF;
+    width: 980px;
+    display: inline-flex;
+
+
+
+}
+
+#lateral{
+    width: 330px;
+    height: 200px;
+    border: 1px solid red ;
+
+    padding-left: 8px;
+    margin: 50px 0 0 -1px;
+
+    float: left;
+
+
+}
+
+#principal{
+    border: 1px solid red ;
+    padding-left: 20px;
+    margin:50px 0 18px 0 ;
+
+
 }
