pagina con mejor estilo todo centrado  y colocado con el nuevo logo ..

--- a/style.css
+++ b/style.css
@@ -1,36 +1,54 @@
 body{
     background-color: orange;
     width: 980px;
-    margin-top:20px;
-margin-left:auto;
+    #margin-top:20px;
+    margin-left:auto;
     margin-right:auto;
 }
+a:link{
+    text-decoration: none;
+
+
+}
+
+.titulillo{
+
+    padding: 0 1% 0 2% ;
+    background-color: orange;
+    border-radius: 10px;
+    margin-right: 10px;
+    margin-left: -10px;
+    color: black;
+    box-shadow: 3px 3px black ;
+
+}
+
+#menu {
+    width: auto;
+    height: 60px;
+    margin-top: 2px;
+    padding-top: 5px;
+    background-color: black;
+}
+
 ul.nav{
     list-style: none;
     float:left;
-
-
+    margin-right: 10%
 }
 
-p{
-
-    text-align: center;
-}
-
-
-h4{
-
-    margin: 5px 0 20px 0;
-}
 ul.nav a{
     text-decoration: none;
+
 }
+
 .nav li{
     float: left;
     margin: 0 0 0 5px; /*solo queremos un lado esa seria la forma abreviada*/
 }
+
 .nav li a{
-    padding: 5px    15px;/*lo que esta por dentro del borde es el padding*/ /* 5 arriba y abajo y 15 izq derech*/
+    padding: 5px 15px;/*lo que esta por dentro del borde es el padding*/ /* 5 arriba y abajo y 15 izq derech*/
     font-weight: bold;
     color: #ccc; /* no todos los navegadores pillan el 2 tipo declarado por ello necesitamos hacer un caso base primero*/
     color: white;/* para el nivel de transparencia*/
@@ -42,22 +60,22 @@ ul.nav a{
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
-.nav li a:hover,
-.nav li a:focus {
-    color: black;
+.nav li a:hover, .nav li a:focus {
+    color: orange;
 
 }
 .nav a:active{
-    color:black;
-
+    color:orangered;
 }
-div#nav2{
 
-    margin-top: 50px;
-    padding-top: 4%;
-
-
+p{
+    text-align: center;
 }
+
+h4{
+    margin: 5px 0 20px 0;
+}
+
 div#izquierda{
     width: 625px;
 
