--- a/style.css
+++ b/style.css
@@ -60,6 +60,12 @@ ul.nav a{
 .nav a:active{
     color:orangered;
 }
+#orange{
+    color: orange;
+}
+#blanco{
+    color:white;
+}
 
 p{
     text-align: center;
@@ -183,10 +189,10 @@ li a.ranking {
 
 }
 
-h2#ranking{
+h2.ranking{
     margin-top: 20px;
     text-align: center;
- 
+
 }
 
 img.ranking{
@@ -199,4 +205,29 @@ img.ranking{
 }
 
 
+.dropdown-content {
+    display: none;
+    position: absolute;
+    margin-left: auto;
+    margin-right: 70%;
+    margin-bottom: 10%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
 
+    z-index: 1;
+    border: 2px solid black;
+}
+
+.dropdown:hover .dropdown-content {
+    display: table-row;
+    width: 300px;
+    height: 200px;
+}
+
+.desc {
+    padding: 15px;
+    text-align: left;
+}
