--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body{
     margin-left:auto;
     margin-right:auto;
 }
+
+
 a:link{
     text-decoration: none;
 }
@@ -162,7 +164,7 @@ img.tamg{
     background-color: black;
     border-radius: 5px;
     color: white;
-    margin: 0px -16px  8px  -21px ;
+    margin: 0 -16px  8px  -21px ;
     padding-left: 3px;
 }
 
@@ -193,6 +195,7 @@ h2.ranking{
     margin-top: 20px;
     text-align: center;
 
+
 }
 
 img.ranking{
@@ -217,6 +220,7 @@ img.ranking{
     background-color: #f9f9f9;
     min-width: 160px;
 
+
     z-index: 1;
     border: 2px solid black;
 }
@@ -230,4 +234,30 @@ img.ranking{
 .desc {
     padding: 15px;
     text-align: left;
+}
+label{
+    font-size: 21px;
+    margin:5% 5px 5px 15%;
+    display: list-item;
+    list-style: none;
+}
+input{
+    margin-left: 10px;
+}
+
+#formul{
+    border: 2px outset black;
+    margin-bottom: 10px;
+}
+
+.input{
+    margin-right: 30%;
+    margin-top: -4% ;
+    width: 180px;
+    height: 50px;
+
+
+    float: right;
+    display: inline-flex;
+
 }
