--- a/style.css
+++ b/style.css
@@ -219,8 +219,6 @@ img.ranking{
     bottom: 0;
     background-color: #f9f9f9;
     min-width: 160px;
-
-
     z-index: 1;
     border: 2px solid black;
 }
@@ -235,29 +233,41 @@ img.ranking{
     padding: 15px;
     text-align: left;
 }
-label{
-    font-size: 21px;
-    margin:5% 5px 5px 15%;
-    display: list-item;
-    list-style: none;
-}
-input{
-    margin-left: 10px;
-}
-
-#formul{
-    border: 2px outset black;
-    margin-bottom: 10px;
-}
-
-.input{
-    margin-right: 30%;
-    margin-top: -4% ;
-    width: 180px;
-    height: 50px;
 
 
-    float: right;
-    display: inline-flex;
+
+#wrapper {
+    width: 40%;
+    height: 40%;
+    margin: 10% 30% 30% 30%;
+    padding: 50px;
+    background: lightgray;
+    border: 1px red solid;
+
 
 }
+
+
+.textInput {
+    border: none;
+    height: 28px;
+    margin: 2px;
+    border: 1px solid black;
+    font-size: 1.2em;
+    padding: 5px;
+    width: 95%;
+}
+.textInput:focus {
+    outline: none;
+}
+.btn {
+    width: 98.6%;
+    border: none;
+    margin-top: 5px;
+    color: white;
+    background-color: black;
+    border-radius: 5px;
+    padding: 12px;
+
+}
+
